Fixed some layout issues for being iframed and the modal dialog frame.

--- a/app/stylesheets/answer_iframe.scss
+++ b/app/stylesheets/answer_iframe.scss
@@ -1,6 +1,11 @@
+* {
+ overflow-x: hidden;   
+}
 #content {
   margin: 0;
   margin-top: 0.1em;
+  width: 780px;
+  
   .paged .panel{
      border: 0;
      padding: 1em;
