--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -19,8 +19,8 @@ $masthead_bg: #0f72a4;
     padding: 0;
 }
 #modalFrame {
-    width:820px;
-    height:600px;        
+    width: 100%;
+    height: 99%;    
 }
 
 body {
